# hookers

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
hookers/: __init__.py
tests/: test_core.py
