[tool.poetry]
name = "hookers"
version = "0.1.0"
description = ""
authors = ["林玮 (Jade Lin) <linw1995@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"
flake8-bugbear = "^20.11.1"
pytest = "^6.1.2"
mypy = "^0.790"
pytest-cov = "^2.10.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
version_files = ["pyproject.toml:version"]
tag_format = "$version"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
