[tool.poetry]
name = "hookers"
version = "1.0.0"
license = "MIT"
description = "Python function call hookers"
authors = ["林玮 (Jade Lin) <linw1995@icloud.com>"]
readme = "README.md"
homepage = "https://github.com/linw1995/hookers"
repository = "https://github.com/linw1995/hookers"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
include = ["CHANGELOG.md"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/linw1995/hookers/issues"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"
flake8-bugbear = "^20.11.1"
pytest = "^6.1.2"
mypy = "^0.790"
pytest-cov = "^2.10.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = ["pyproject.toml:version"]
tag_format = "$version"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
